--- a/index.html
+++ b/index.html
@@ -7,12 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+Traditional+Chinese">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script>
+    $(document).ready(function () {
+      $("#loading-content").load("./pages/home.html");
+    });
     function getPaging(str) {
       console.log("click");
-      $("#loading-content").load("./class/" + str + ".html");
+      $("#loading-content").load("./pages/" + str + ".html");
     }
   </script>
 </head>
@@ -25,10 +29,10 @@
         <a class="navbar-brand" href="#">arWai Homebrew</a>
       </div>
       <ul id="top-navbar" class="nav navbar-nav">
-        <li onclick="getPaging('home')""><a href=" #">Home</a></li>
+        <li onclick="getPaging('home')"><a href="#">主頁</a></li>
         <li onclick="getPaging('gunslinger')"><a href="#">戰士 - 槍手</a></li>
         <li onclick="getPaging('blood_hunter')"><a href="#">血獵者</a></li>
-        <li class="nav-item"><a href="#">Page 3</a></li>
+        <li class="nav-item"><a href="#"></a></li>
       </ul>
     </div>
   </nav>
