fix google font style

--- a/pages/gunslinger.html
+++ b/pages/gunslinger.html
@@ -16,7 +16,7 @@
     rel='stylesheet' type='text/css' />
   <style type='text/css'>
   </style>
-  <title>火槍手Gunslinger（戰士范型)</title>
+  <title>火槍手Gunslinger(戰士范型)</title>
 </head>
 
 <body class='typora-export os-windows'>
@@ -26,48 +26,50 @@
       <div class='md-toc' mdtype='toc'>
         <p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n0"><a
               class="md-toc-inner" href="#戰士范型---火槍手gunslinger">戰士范型 - 火槍手Gunslinger</a></span><span role="listitem"
-            class="md-toc-item md-toc-h1" data-ref="n10"><a class="md-toc-inner" href="#職業特性">職業特性</a></span><span
-            role="listitem" class="md-toc-item md-toc-h4" data-ref="n11"><a class="md-toc-inner"
+            class="md-toc-item md-toc-h1" data-ref="n9"><a class="md-toc-inner" href="#職業特性">職業特性</a></span><span
+            role="listitem" class="md-toc-item md-toc-h4" data-ref="n10"><a class="md-toc-inner"
               href="#火器嫻熟-firearm-proficiency">火器嫻熟 Firearm Proficiency</a></span><span role="listitem"
-            class="md-toc-item md-toc-h4" data-ref="n13"><a class="md-toc-inner" href="#槍匠-gunsmith">槍匠
-              Gunsmith</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n15"><a
+            class="md-toc-item md-toc-h4" data-ref="n12"><a class="md-toc-inner" href="#槍匠-gunsmith">槍匠
+              Gunsmith</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n14"><a
               class="md-toc-inner" href="#火器特性-firearm-properties">火器特性 Firearm Properties</a></span><span
-            role="listitem" class="md-toc-item md-toc-h6" data-ref="n17"><a class="md-toc-inner"
-              href="#彈匣容量-reload">彈匣容量 Reload</a></span><span role="listitem" class="md-toc-item md-toc-h6"
-            data-ref="n19"><a class="md-toc-inner" href="#啞火值-misfire">啞火值 Misfire</a></span><span role="listitem"
-            class="md-toc-item md-toc-h6" data-ref="n21"><a class="md-toc-inner" href="#爆炸-explosive">爆炸
-              Explosive</a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n23"><a
-              class="md-toc-inner" href="#彈藥-ammunition">彈藥 Ammunition</a></span><span role="listitem"
-            class="md-toc-item md-toc-h4" data-ref="n25"><a class="md-toc-inner" href="#射擊熟手-adept-marksman">射擊熟手 Adept
-              Marksman</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n27"><a
-              class="md-toc-inner" href="#英勇射擊-grit">英勇射擊 Grit</a></span><span role="listitem"
-            class="md-toc-item md-toc-h6" data-ref="n29"><a class="md-toc-inner"
-              href="#你能通過以下方式來回複英勇點">你能通過以下方式來回複英勇點：</a></span><span role="listitem" class="md-toc-item md-toc-h6"
-            data-ref="n36"><a class="md-toc-inner" href="#特技射擊-trick-shots-1">特技射擊 Trick Shots</a></span><span
-            role="listitem" class="md-toc-item md-toc-h6" data-ref="n39"><a class="md-toc-inner"
-              href="#特技射擊豁免-saving-throws">特技射擊豁免 Saving Throws</a></span><span role="listitem"
-            class="md-toc-item md-toc-h4" data-ref="n41"><a class="md-toc-inner" href="#特技射擊-trick-shots-2">特技射擊 Trick
-              Shots</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n42"><a class="md-toc-inner"
-              href="#威嚇射擊-bullying-shot">威嚇射擊 Bullying Shot</a></span><span role="listitem"
-            class="md-toc-item md-toc-h5" data-ref="n44"><a class="md-toc-inner" href="#暈眩射擊-dazing-shot">暈眩射擊 Dazing
-              Shot</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n46"><a class="md-toc-inner"
-              href="#銳眼射擊-deadeye-shot">銳眼射擊 Deadeye Shot</a></span><span role="listitem" class="md-toc-item md-toc-h5"
-            data-ref="n48"><a class="md-toc-inner" href="#繳械射擊-disarming-shot">繳械射擊 Disarming Shot</a></span><span
-            role="listitem" class="md-toc-item md-toc-h5" data-ref="n50"><a class="md-toc-inner"
-              href="#強力射擊-forceful-shot">強力射擊 Forceful Shot</a></span><span role="listitem"
-            class="md-toc-item md-toc-h5" data-ref="n52"><a class="md-toc-inner" href="#貫穿射擊-piercing-shot">貫穿射擊
-              Piercing Shot</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n54"><a
-              class="md-toc-inner" href="#爆發射擊-violent-shot">爆發射擊 Violent Shot</a></span><span role="listitem"
-            class="md-toc-item md-toc-h5" data-ref="n56"><a class="md-toc-inner" href="#側翼射擊-winging-shot">側翼射擊 Winging
-              Shot</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n58"><a class="md-toc-inner"
-              href="#快槍手-quick-draw">快槍手 Quick Draw</a></span><span role="listitem" class="md-toc-item md-toc-h4"
-            data-ref="n60"><a class="md-toc-inner" href="#快速維修-rapid-repair">快速維修 Rapid Repair</a></span><span
-            role="listitem" class="md-toc-item md-toc-h4" data-ref="n62"><a class="md-toc-inner"
-              href="#快速裝填-lighting-reload">快速裝填 Lighting Reload</a></span><span role="listitem"
-            class="md-toc-item md-toc-h4" data-ref="n64"><a class="md-toc-inner" href="#惡意-vicious-intent">惡意 Vicious
-              Intent</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n66"><a
+            role="listitem" class="md-toc-item md-toc-h6" data-ref="n16"><a class="md-toc-inner"
+              href="#彈匣容量-reload"><strong>彈匣容量 Reload</strong></a></span><span role="listitem"
+            class="md-toc-item md-toc-h6" data-ref="n18"><a class="md-toc-inner" href="#啞火值-misfire"><strong>啞火值
+                Misfire</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n20"><a
+              class="md-toc-inner" href="#爆炸-explosive"><strong>爆炸 Explosive</strong></a></span><span role="listitem"
+            class="md-toc-item md-toc-h6" data-ref="n22"><a class="md-toc-inner" href="#彈藥-ammunition"><strong>彈藥
+                Ammunition</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n24"><a
+              class="md-toc-inner" href="#射擊熟手-adept-marksman">射擊熟手 Adept Marksman</a></span><span role="listitem"
+            class="md-toc-item md-toc-h5" data-ref="n26"><a class="md-toc-inner" href="#英勇射擊-grit">英勇射擊
+              Grit</a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n28"><a class="md-toc-inner"
+              href="#你能通過以下方式來回複英勇點"><strong>你能通過以下方式來回複英勇點：</strong></a></span><span role="listitem"
+            class="md-toc-item md-toc-h6" data-ref="n35"><a class="md-toc-inner" href="#特技射擊-trick-shots-1"><strong>特技射擊
+                Trick Shots</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n38"><a
+              class="md-toc-inner" href="#特技射擊豁免-saving-throws"><strong>特技射擊豁免 Saving Throws</strong></a></span><span
+            role="listitem" class="md-toc-item md-toc-h4" data-ref="n40"><a class="md-toc-inner"
+              href="#特技射擊-trick-shots-2">特技射擊 Trick Shots</a></span><span role="listitem" class="md-toc-item md-toc-h6"
+            data-ref="n41"><a class="md-toc-inner" href="#威嚇射擊-bullying-shot"><strong>威嚇射擊 Bullying
+                Shot</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n43"><a
+              class="md-toc-inner" href="#暈眩射擊-dazing-shot"><strong>暈眩射擊 Dazing Shot</strong></a></span><span
+            role="listitem" class="md-toc-item md-toc-h6" data-ref="n45"><a class="md-toc-inner"
+              href="#銳眼射擊-deadeye-shot"><strong>銳眼射擊 Deadeye Shot</strong></a></span><span role="listitem"
+            class="md-toc-item md-toc-h6" data-ref="n47"><a class="md-toc-inner"
+              href="#繳械射擊-disarming-shot"><strong>繳械射擊 Disarming Shot</strong></a></span><span role="listitem"
+            class="md-toc-item md-toc-h6" data-ref="n49"><a class="md-toc-inner" href="#強力射擊-forceful-shot"><strong>強力射擊
+                Forceful Shot</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n51"><a
+              class="md-toc-inner" href="#貫穿射擊-piercing-shot"><strong>貫穿射擊 Piercing Shot</strong></a></span><span
+            role="listitem" class="md-toc-item md-toc-h6" data-ref="n53"><a class="md-toc-inner"
+              href="#爆發射擊-violent-shot"><strong>爆發射擊 Violent Shot</strong></a></span><span role="listitem"
+            class="md-toc-item md-toc-h6" data-ref="n55"><a class="md-toc-inner" href="#側翼射擊-winging-shot"><strong>側翼射擊
+                Winging Shot</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n57"><a
+              class="md-toc-inner" href="#快槍手-quick-draw">快槍手 Quick Draw</a></span><span role="listitem"
+            class="md-toc-item md-toc-h4" data-ref="n59"><a class="md-toc-inner" href="#快速維修-rapid-repair">快速維修 Rapid
+              Repair</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n61"><a
+              class="md-toc-inner" href="#快速裝填-lighting-reload">快速裝填 Lighting Reload</a></span><span role="listitem"
+            class="md-toc-item md-toc-h4" data-ref="n63"><a class="md-toc-inner" href="#惡意-vicious-intent">惡意 Vicious
+              Intent</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n65"><a
               class="md-toc-inner" href="#失血重擊-hemorrhaging-critical">失血重擊 Hemorrhaging Critical</a></span><span
-            role="listitem" class="md-toc-item md-toc-h2" data-ref="n69"><a class="md-toc-inner"
+            role="listitem" class="md-toc-item md-toc-h2" data-ref="n68"><a class="md-toc-inner"
               href="#火器列表">火器列表</a></span></p>
       </div>
       <blockquote>
@@ -83,17 +85,18 @@
       <h4 id='火器嫻熟-firearm-proficiency'><span>火器嫻熟 Firearm Proficiency</span></h4>
       <p><span>第 3 級起，你獲得此特性。你獲得火器的熟練，當你用火器攻擊時，你可以把人物的熟練度加在你的攻擊檢定上。</span></p>
       <h4 id='槍匠-gunsmith'><span>槍匠 Gunsmith</span></h4>
-      <p><span>第 3 級起，你獲得修補匠工具tinker&#39;s tools的熟練，你可以使用工具去製作彈藥、修理損壞的火器或者甚至定製一把新的火器（取決於DM）。</span></p>
+      <p><span>第 3 級起，你獲得修補匠工具tinker&#39;s
+          tools的熟練，您可以使用它們以一半的成本製作彈藥、修理損壞的火器或者甚至定製一把新的火器（取決於DM）。一些極具實驗性和復雜性的槍支只能通過製作獲得。</span></p>
       <h5 id='火器特性-firearm-properties'><span>火器特性 Firearm Properties</span></h5>
       <p><span>火器是一種全新且不穩定的技術，所以他們有自己獨特的武器效能類別，這些技術被數據代表（見下表）。</span></p>
-      <h6 id='彈匣容量-reload'><span>彈匣容量 Reload</span></h6>
-      <p><span>火器在一次裝填之前可以連續開火的次數，你必須空出一隻手，並花費一個動作來裝填。</span></p>
-      <h6 id='啞火值-misfire'><span>啞火值 Misfire</span></h6>
+      <h6 id='彈匣容量-reload'><strong><span>彈匣容量 Reload</span></strong></h6>
+      <p><span>火器在一次裝填之前可以連續開火的次數，你必須空出一隻手，並花費一個動作或一次攻擊來裝填。</span></p>
+      <h6 id='啞火值-misfire'><strong><span>啞火值 Misfire</span></strong></h6>
       <p><span>在你使用火器攻擊時，如果攻擊骰低於或等於武器啞火值，武器啞火，此次攻擊失敗，在你嘗試花費一個動作修理火器之前該火器無法再次使用，你需要使用修補工具來修理火器（DC =
-          8+啞火值），如果失敗，該火器報廢，你必須在戰鬥外消耗該火器四分之一的費用來修理。</span></p>
-      <h6 id='爆炸-explosive'><span>爆炸 Explosive</span></h6>
+          8+啞火值），如果失敗，該火器報廢，你必須在戰鬥外消耗該火器四分之一的費用來修理。當一名不熟練火器的角色使用火器時，啞火值+1。</span></p>
+      <h6 id='爆炸-explosive'><strong><span>爆炸 Explosive</span></strong></h6>
       <p><span>命中時，距離目標5英尺範圍內的所有物件或生物都必須進行敏捷豁免檢定（DC = 8 +熟練調整值+敏捷調整值）否則遭受1d8火焰傷害。如果武器未命中，則彈藥不會爆炸，或者撞到東西彈開。</span></p>
-      <h6 id='彈藥-ammunition'><span>彈藥 Ammunition</span></h6>
+      <h6 id='彈藥-ammunition'><strong><span>彈藥 Ammunition</span></strong></h6>
       <p>
         <span>所有火器都需要彈藥進行攻擊，可能幾乎找不到出售稀有彈藥的人。但是，如果收集了材料，則可以使用修補工具自己製作彈藥，費用僅為出售價的一半。每種火器都有自己的彈藥種類，通常按下面列出的價格批量出售或製作。</span>
       </p>
@@ -101,39 +104,39 @@
       <p><span>你從第3級選擇此范型起，你將學會使用強大的射擊技巧以使用火器來傷害對手。</span></p>
       <h5 id='英勇射擊-grit'><span>英勇射擊 Grit</span></h5>
       <p><span>第 3 級起，你會獲得等同於你感知調整值的英勇點（至少為1）。你可以消耗英勇點來進行一次特殊射擊攻擊（見下文），且一次攻擊只受一次單一特殊射擊的影響。</span></p>
-      <h6 id='你能通過以下方式來回複英勇點'><span>你能通過以下方式來回複英勇點：</span></h6>
+      <h6 id='你能通過以下方式來回複英勇點'><strong><span>你能通過以下方式來回複英勇點：</span></strong></h6>
       <ul>
         <li><strong><span>火器重擊：</span></strong><span>每次你在戰鬥中通過火器打出一次重擊，你獲得一個被消耗的英勇點。</span></li>
         <li><strong><span>火器擊殺：</span></strong><span>每當你通過火器將一個敵對單位的生命降到0並且擊殺他，你將重新獲得一個已消耗的英勇點。</span></li>
         <li><span>你也可以在完成一次短休或長休后回覆所有的英勇點。</span></li>
       </ul>
-      <h6 id='特技射擊-trick-shots-1'><span>特技射擊 Trick Shots</span></h6>
+      <h6 id='特技射擊-trick-shots-1'><strong><span>特技射擊 Trick Shots</span></strong></h6>
       <p><span>你將學習到兩種選擇的技巧，下面的「特技射擊」中將詳細介紹。許多技巧以某種方式增強了攻擊力。必須在進行攻擊擲骰之前聲明使用特技射擊。每次攻擊只能使用一個特技射擊。</span>
         <span>你將在第7、10、15和18級學習一個新的技巧。每次學習新的特技射擊時，同時你也可以用另一種特技射擊來替換之前的一個。</span>
       </p>
-      <h6 id='特技射擊豁免-saving-throws'><span>特技射擊豁免 Saving Throws</span></h6>
+      <h6 id='特技射擊豁免-saving-throws'><strong><span>特技射擊豁免 Saving Throws</span></strong></h6>
       <p><span>你的某些特技射擊要求你的目標進行豁免檢定以抵抗特技射擊的效果。豁免得分DC的計算方式如下：</span>
         <span>特技射擊豁免DC = 8 +你的熟練調整值+敏捷調整值</span>
       </p>
       <h4 id='特技射擊-trick-shots-2'><span>特技射擊 Trick Shots</span></h4>
-      <h5 id='威嚇射擊-bullying-shot'><span>威嚇射擊 Bullying Shot</span></h5>
+      <h6 id='威嚇射擊-bullying-shot'><strong><span>威嚇射擊 Bullying Shot</span></strong></h6>
       <p><span>你可以使用火器震耳欲聾的開火聲和爆炸聲來撼動對手的決心。你可以在攻擊時同時進行魅力（威嚇）檢定時消耗一個英勇點以取得優勢。</span></p>
-      <h5 id='暈眩射擊-dazing-shot'><span>暈眩射擊 Dazing Shot</span></h5>
+      <h6 id='暈眩射擊-dazing-shot'><strong><span>暈眩射擊 Dazing Shot</span></strong></h6>
       <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點，以使對手暈眩。被擊中時，該生物受到正常傷害，並且必須做出一次豁免檢定，否則在其受到攻擊時處於劣勢，直到其下一回合結束。</span></p>
-      <h5 id='銳眼射擊-deadeye-shot'><span>銳眼射擊 Deadeye Shot</span></h5>
+      <h6 id='銳眼射擊-deadeye-shot'><strong><span>銳眼射擊 Deadeye Shot</span></strong></h6>
       <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點來獲得攻擊優勢。</span></p>
-      <h5 id='繳械射擊-disarming-shot'><span>繳械射擊 Disarming Shot</span></h5>
+      <h6 id='繳械射擊-disarming-shot'><strong><span>繳械射擊 Disarming Shot</span></strong></h6>
       <p><span>當對生物用火器進行攻擊時，可以消耗一個英勇點，以嘗試從其手中擊飛一個物品。被擊中時，該生物受到正常傷害，並且必須進行一次力量豁免否則丟失1個你選擇的手持物品，並將該物品推離你10英尺遠。</span></p>
-      <h5 id='強力射擊-forceful-shot'><span>強力射擊 Forceful Shot</span></h5>
+      <h6 id='強力射擊-forceful-shot'><strong><span>強力射擊 Forceful Shot</span></strong></h6>
       <p><span>當對生物用火器進行攻擊時，你可以花費一個英勇點試圖將讓其失去平衡並迫使其後退。被擊中時，該生物受到正常傷害，並且必須進行一次力量豁免否則被推離你15英尺遠。</span></p>
-      <h5 id='貫穿射擊-piercing-shot'><span>貫穿射擊 Piercing Shot</span></h5>
+      <h6 id='貫穿射擊-piercing-shot'><strong><span>貫穿射擊 Piercing Shot</span></strong></h6>
       <p>
         <span>當對一個生物用火器進行攻擊時，你可以花費一個英勇點來嘗試同時擊中多個對手。初始攻擊使火器的啞火值提高+1。被擊中時，該生物受到正常傷害，同時你對目標正後方直線中且在你的射程內的每個生物進行一次帶有劣勢的攻擊檢定。只有第一次射擊會啞火。</span>
       </p>
-      <h5 id='爆發射擊-violent-shot'><span>爆發射擊 Violent Shot</span></h5>
+      <h6 id='爆發射擊-violent-shot'><strong><span>爆發射擊 Violent Shot</span></strong></h6>
       <p><span>對生物用火器進行攻擊時，可以消耗一個或多個英勇點，以提高攻擊的不穩定性。每消耗一個英勇點，攻擊會使火器的啞火值提高+2。如果攻擊命中，可以在進行傷害擲骰時增加你消耗的英勇點數量的武器傷害骰。</span>
       </p>
-      <h5 id='側翼射擊-winging-shot'><span>側翼射擊 Winging Shot</span></h5>
+      <h6 id='側翼射擊-winging-shot'><strong><span>側翼射擊 Winging Shot</span></strong></h6>
       <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點來嘗試使擊倒目標。被擊中時，該生物受到正常傷害，且必須進行一次力量豁免否則倒地。</span></p>
       <h4 id='快槍手-quick-draw'><span>快槍手 Quick Draw</span></h4>
       <p><span>第 7 級起，你把你的熟練加值加入先攻調整值中。你還可以用一個互動動作收起一把槍，然後拔出另一把槍。</span></p>
