--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+Traditional+Chinese">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+TC">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <script>
@@ -23,7 +23,7 @@
 
 <body>
 
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default" style="margin-bottom: 0px">
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">arWai Homebrew</a>
