--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh_tw">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>arWai Homebrew Data Site</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -26,7 +26,7 @@
   <nav class="navbar navbar-default" style="margin-bottom: 0px">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">arWai Homebrew</a>
+        <a onclick="getPaging('home')" class="navbar-brand" href="#">arWai Homebrew</a>
       </div>
       <ul id="top-navbar" class="nav navbar-nav">
         <li onclick="getPaging('home')"><a href="#">主頁</a></li>
