--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>arWai Homebrew Data Site</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+TC">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -22,22 +23,38 @@
 </head>
 
 <body>
-
-  <nav class="navbar navbar-default" style="margin-bottom: 0px">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <div class="container-fluid">
-      <div class="navbar-header">
-        <a onclick="getPaging('home')" class="navbar-brand" href="#">arWai Homebrew</a>
+      <a class="navbar-brand" href="#">arWai Homebrew</a>
+      <button onclick="getPaging('home')" class="navbar-toggler" type="button" data-bs-toggle="collapse"
+        data-bs-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a onclick="getPaging('home')" class="nav-link" href="#">主頁</a>
+          </li>
+          <li class="nav-item">
+            <a onclick="getPaging('gunslinger')" class="nav-link" href="#">槍手</a>
+          </li>
+          <li class="nav-item">
+            <a onclick="getPaging('blood_hunter')" class="nav-link" href="#">血獵者</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Home</a></li>
+              <li><a class="dropdown-item" href="#">gunslinger</a></li>
+              <li><a class=" dropdown-item" href="#">blood_hunter</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-      <ul id="top-navbar" class="nav navbar-nav">
-        <li onclick="getPaging('home')"><a href="#">主頁</a></li>
-        <li onclick="getPaging('gunslinger')"><a href="#">戰士 - 槍手</a></li>
-        <li onclick="getPaging('blood_hunter')"><a href="#">血獵者</a></li>
-        <li class="nav-item"><a href="#"></a></li>
-      </ul>
     </div>
   </nav>
 
-  <div class="container">
+  <div class="container" style="background:darkblue;height: 500px;">
     <div id="loading-content">
 
     </div>
