delete height on container

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
   </nav>
 
-  <div class="container" style="background:darkblue;height: 500px;">
+  <div class="container" style="background:darkgray;">
     <div id="loading-content">
 
     </div>
