update html content and css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,37 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Serif+TC">
+  <link
+    href='https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap'
+    rel='stylesheet' type='text/css' />
+  <link
+    href='https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap'
+    rel='stylesheet' type='text/css' />
+  <link
+    href='https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
+    rel='stylesheet' type='text/css' />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <style>
+    html {
+      /* height of sticky header */
+      scroll-padding-top: 70px;
+    }
+
+    ::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    }
+  </style>
   <script>
     $(document).ready(function () {
       $("#loading-content").load("./pages/home.html");
@@ -54,8 +83,74 @@
     </div>
   </nav>
 
-  <div class="container" style="background:darkgray;">
+  <div class="container">
     <div id="loading-content">
+      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
+        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
+        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
+      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
+        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
+        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
+      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
+        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
+        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
+        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
+        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
+      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
+        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
+        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
+      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
+        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
+        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
+      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
+        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
+        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
+        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
+        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
+      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
+        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
+        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
+      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
+        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
+        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
+      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
+        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
+        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
+        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
+        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
+      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
+        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
+        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
+      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
+        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
+        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
+      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
+        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
+        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
+        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
+        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
+      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
+        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
+        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
+      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
+        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
+        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
+      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
+        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
+        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
+        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
+        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
+      <p>Lorem ipsum dolor sit amet. Et nisi architecto qui blanditiis voluptatum rem adipisci dolore sit quas vitae et
+        autem quia id inventore maxime. Sit internos vero ea inventore quidem aut harum praesentium placeat omnis. A
+        expedita labore aut quia dolores aut nemo error sed sint commodi. </p>
+      <p>Ab ducimus voluptatibus est quaerat quia id fuga molestiae hic excepturi autem. Est cupiditate omnis est quas
+        eaque eos eaque iusto. 33 accusamus officiis id assumenda quasi est distinctio dolor non deleniti repellat qui
+        iusto fugiat ut nesciunt quia ex sunt dolorum. </p>
+      <p>Qui quia similique aut voluptatibus architecto aut voluptatem perspiciatis et consequatur reiciendis eos
+        dignissimos voluptatem eos reiciendis voluptatem et repellendus nobis. Illo totam sed exercitationem alias qui
+        autem dolorem. Vel molestiae consequuntur qui sint consectetur 33 optio consequatur qui rerum consequatur ut
+        molestias tempore qui quia doloremque. Qui dolorem unde est dignissimos aspernatur At libero nihil est
+        laudantium magni ad galisum dolor qui nesciunt soluta qui excepturi voluptatem. </p>
 
     </div>
   </div>
