--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<h3>Basic Navbar Example</h3>
+<h3>Homebrew資訊頁</h3>
 <p>
-    A navigation bar is a navigation header that is placed at the top of the page.
+    就是一個普通的首頁
 </p>
