fix background and scroll padding

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
   <style>
     html {
       /* height of sticky header */
-      scroll-padding-top: 70px;
+      scroll-padding-top: 60px;
     }
 
-    .container {
+    body {
       background-image: url("../image/torillic-bg.jpg");
       background-size: cover;
       background-position: center;
