--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,8 @@
-<h3>Homebrew資訊頁</h3>
-<p>
-    就是一個普通的首頁
-</p>
+<div class='typora-export-content'>
+    <div id='write' class=''>
+        <h3>Homebrew資訊頁</h3>
+        <p>
+            就是一個普通的首頁
+        </p>
+    </div>
+</div>
