--- a/pages/gunslinger.html
+++ b/pages/gunslinger.html
@@ -12,14 +12,14 @@
             class="md-toc-inner" href="#火器特性-firearm-properties">火器特性 Firearm Properties</a></span><span role="listitem"
           class="md-toc-item md-toc-h6" data-ref="n16"><a class="md-toc-inner" href="#彈匣容量-reload"><strong>彈匣容量
               Reload</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n18"><a
-            class="md-toc-inner" href="#啞火值-misfire"><strong>啞火值
-              Misfire</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n20"><a
-            class="md-toc-inner" href="#爆炸-explosive"><strong>爆炸 Explosive</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h6" data-ref="n22"><a class="md-toc-inner" href="#彈藥-ammunition"><strong>彈藥
-              Ammunition</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n24"><a
-            class="md-toc-inner" href="#射擊熟手-adept-marksman">射擊熟手 Adept Marksman</a></span><span role="listitem"
-          class="md-toc-item md-toc-h5" data-ref="n26"><a class="md-toc-inner" href="#英勇射擊-grit">英勇射擊
-            Grit</a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n28"><a class="md-toc-inner"
+            class="md-toc-inner" href="#啞火值-misfire"><strong>啞火值 Misfire</strong></a></span><span role="listitem"
+          class="md-toc-item md-toc-h6" data-ref="n20"><a class="md-toc-inner" href="#爆炸-explosive"><strong>爆炸
+              Explosive</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n22"><a
+            class="md-toc-inner" href="#彈藥-ammunition"><strong>彈藥 Ammunition</strong></a></span><span role="listitem"
+          class="md-toc-item md-toc-h4" data-ref="n24"><a class="md-toc-inner" href="#射擊熟手-adept-marksman">射擊熟手 Adept
+            Marksman</a></span><span role="listitem" class="md-toc-item md-toc-h5" data-ref="n26"><a
+            class="md-toc-inner" href="#英勇射擊-grit">英勇射擊 Grit</a></span><span role="listitem"
+          class="md-toc-item md-toc-h6" data-ref="n28"><a class="md-toc-inner"
             href="#你能通過以下方式來回複英勇點"><strong>你能通過以下方式來回複英勇點：</strong></a></span><span role="listitem"
           class="md-toc-item md-toc-h6" data-ref="n35"><a class="md-toc-inner" href="#特技射擊-trick-shots-1"><strong>特技射擊
               Trick Shots</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n38"><a
@@ -33,16 +33,16 @@
             href="#銳眼射擊-deadeye-shot"><strong>銳眼射擊 Deadeye Shot</strong></a></span><span role="listitem"
           class="md-toc-item md-toc-h6" data-ref="n47"><a class="md-toc-inner" href="#繳械射擊-disarming-shot"><strong>繳械射擊
               Disarming Shot</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n49"><a
-            class="md-toc-inner" href="#強力射擊-forceful-shot"><strong>強力射擊
-              Forceful Shot</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n51"><a
-            class="md-toc-inner" href="#貫穿射擊-piercing-shot"><strong>貫穿射擊 Piercing Shot</strong></a></span><span
-          role="listitem" class="md-toc-item md-toc-h6" data-ref="n53"><a class="md-toc-inner"
-            href="#爆發射擊-violent-shot"><strong>爆發射擊 Violent Shot</strong></a></span><span role="listitem"
-          class="md-toc-item md-toc-h6" data-ref="n55"><a class="md-toc-inner" href="#側翼射擊-winging-shot"><strong>側翼射擊
-              Winging Shot</strong></a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n57"><a
-            class="md-toc-inner" href="#快槍手-quick-draw">快槍手 Quick Draw</a></span><span role="listitem"
-          class="md-toc-item md-toc-h4" data-ref="n59"><a class="md-toc-inner" href="#快速維修-rapid-repair">快速維修 Rapid
-            Repair</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n61"><a class="md-toc-inner"
+            class="md-toc-inner" href="#強力射擊-forceful-shot"><strong>強力射擊 Forceful Shot</strong></a></span><span
+          role="listitem" class="md-toc-item md-toc-h6" data-ref="n51"><a class="md-toc-inner"
+            href="#貫穿射擊-piercing-shot"><strong>貫穿射擊 Piercing Shot</strong></a></span><span role="listitem"
+          class="md-toc-item md-toc-h6" data-ref="n53"><a class="md-toc-inner" href="#爆發射擊-violent-shot"><strong>爆發射擊
+              Violent Shot</strong></a></span><span role="listitem" class="md-toc-item md-toc-h6" data-ref="n55"><a
+            class="md-toc-inner" href="#側翼射擊-winging-shot"><strong>側翼射擊 Winging Shot</strong></a></span><span
+          role="listitem" class="md-toc-item md-toc-h4" data-ref="n57"><a class="md-toc-inner"
+            href="#快槍手-quick-draw">快槍手 Quick Draw</a></span><span role="listitem" class="md-toc-item md-toc-h4"
+          data-ref="n59"><a class="md-toc-inner" href="#快速維修-rapid-repair">快速維修 Rapid Repair</a></span><span
+          role="listitem" class="md-toc-item md-toc-h4" data-ref="n61"><a class="md-toc-inner"
             href="#快速裝填-lighting-reload">快速裝填 Lighting Reload</a></span><span role="listitem"
           class="md-toc-item md-toc-h4" data-ref="n63"><a class="md-toc-inner" href="#惡意-vicious-intent">惡意 Vicious
             Intent</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n65"><a class="md-toc-inner"
@@ -75,7 +75,7 @@
     <p><span>命中時，距離目標5英尺範圍內的所有物件或生物都必須進行敏捷豁免檢定（DC = 8 +熟練調整值+敏捷調整值）否則遭受1d8火焰傷害。如果武器未命中，則彈藥不會爆炸，或者撞到東西彈開。</span></p>
     <h6 id='彈藥-ammunition'><strong><span>彈藥 Ammunition</span></strong></h6>
     <p>
-      <span>所有火器都需要彈藥進行攻擊，可能幾乎找不到出售稀有彈藥的人。但是，如果收集了材料，則可以使用修補工具自己製作彈藥，費用僅為出售價的一半。每種火器都有自己的彈藥種類，通常按下面列出的價格批量出售或製作。</span>
+      <span>所有火器都需要彈藥進行攻擊，由於彈藥的稀有性，使得它們幾乎無人販售，也難以尋獲。但是，如果收集了材料，則可以使用修補工具自己製作彈藥，費用僅為出售價的一半。每種火器都有自己的彈藥種類，通常按下面列出的價格批量出售或製作。</span>
     </p>
     <h4 id='射擊熟手-adept-marksman'><span>射擊熟手 Adept Marksman</span></h4>
     <p><span>你從第3級選擇此范型起，你將學會使用強大的射擊技巧以使用火器來傷害對手。</span></p>
@@ -97,9 +97,9 @@
     </p>
     <h4 id='特技射擊-trick-shots-2'><span>特技射擊 Trick Shots</span></h4>
     <h6 id='威嚇射擊-bullying-shot'><strong><span>威嚇射擊 Bullying Shot</span></strong></h6>
-    <p><span>你可以使用火器震耳欲聾的開火聲和爆炸聲來撼動對手的決心。你可以在攻擊時同時進行魅力（威嚇）檢定時消耗一個英勇點以取得優勢。</span></p>
+    <p><span>你可以使用火器震耳欲聾的開火聲和爆炸聲來撼動對手的決心。你可以在魅力（威嚇）檢定時，花費一個英勇點以得到該次檢定的優勢。</span></p>
     <h6 id='暈眩射擊-dazing-shot'><strong><span>暈眩射擊 Dazing Shot</span></strong></h6>
-    <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點，以使對手暈眩。被擊中時，該生物受到正常傷害，並且必須做出一次豁免檢定，否則在其受到攻擊時處於劣勢，直到其下一回合結束。</span></p>
+    <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點，以使對手暈眩。被擊中時，該生物受到正常傷害，並且必須做出一次體質豁免檢定，否則在其受到攻擊時處於劣勢，直到其下一回合結束。</span></p>
     <h6 id='銳眼射擊-deadeye-shot'><strong><span>銳眼射擊 Deadeye Shot</span></strong></h6>
     <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點來獲得攻擊優勢。</span></p>
     <h6 id='繳械射擊-disarming-shot'><strong><span>繳械射擊 Disarming Shot</span></strong></h6>
@@ -111,8 +111,7 @@
       <span>當對一個生物用火器進行攻擊時，你可以花費一個英勇點來嘗試同時擊中多個對手。初始攻擊使火器的啞火值提高+1。被擊中時，該生物受到正常傷害，同時你對目標正後方直線中且在你的射程內的每個生物進行一次帶有劣勢的攻擊檢定。只有第一次射擊會啞火。</span>
     </p>
     <h6 id='爆發射擊-violent-shot'><strong><span>爆發射擊 Violent Shot</span></strong></h6>
-    <p><span>對生物用火器進行攻擊時，可以消耗一個或多個英勇點，以提高攻擊的不穩定性。每消耗一個英勇點，攻擊會使火器的啞火值提高+2。如果攻擊命中，可以在進行傷害擲骰時增加你消耗的英勇點數量的武器傷害骰。</span>
-    </p>
+    <p><span>對生物用火器進行攻擊時，可以消耗一個或多個英勇點，以提高攻擊的不穩定性。每消耗一個英勇點，攻擊會使火器的啞火值提高+2。如果攻擊命中，可以在進行傷害擲骰時增加你消耗的英勇點數量的武器傷害骰。</span></p>
     <h6 id='側翼射擊-winging-shot'><strong><span>側翼射擊 Winging Shot</span></strong></h6>
     <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點來嘗試使擊倒目標。被擊中時，該生物受到正常傷害，且必須進行一次力量豁免否則倒地。</span></p>
     <h4 id='快槍手-quick-draw'><span>快槍手 Quick Draw</span></h4>
