update 鍊金師 和 FVTT

--- a/index.html
+++ b/index.html
@@ -101,12 +101,13 @@
           <li class="nav-item">
             <a onclick="getPaging('blood_hunter')" class="nav-link" href="#">血獵者</a>
           </li>
+          <li class="nav-item">
+            <a onclick="getPaging('alchemist')" class="nav-link" href="#">煉金師 (Homebrew)</a>
+          </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">其他連結</a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Home</a></li>
-              <li><a class="dropdown-item" href="#">gunslinger</a></li>
-              <li><a class=" dropdown-item" href="#">blood_hunter</a></li>
+              <li><a class="dropdown-item" href="http://arwai.ddns.net:30000/">Foundry VTT</a></li>
             </ul>
           </li>
         </ul>
