--- a/pages/gunslinger.html
+++ b/pages/gunslinger.html
@@ -99,7 +99,7 @@
     <h6 id='威嚇射擊-bullying-shot'><strong><span>威嚇射擊 Bullying Shot</span></strong></h6>
     <p><span>你可以使用火器震耳欲聾的開火聲和爆炸聲來撼動對手的決心。你可以在魅力（威嚇）檢定時，花費一個英勇點以得到該次檢定的優勢。</span></p>
     <h6 id='暈眩射擊-dazing-shot'><strong><span>暈眩射擊 Dazing Shot</span></strong></h6>
-    <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點，以使對手暈眩。被擊中時，該生物受到正常傷害，並且必須做出一次體質豁免檢定，否則在其受到攻擊時處於劣勢，直到其下一回合結束。</span></p>
+    <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點，以使對手暈眩。在擊中時，該生物受到正常傷害，並且必須做出一次體質豁免，否則在該生物在攻擊檢定中帶有劣勢，直到該生物的下一回合結束。</span></p>
     <h6 id='銳眼射擊-deadeye-shot'><strong><span>銳眼射擊 Deadeye Shot</span></strong></h6>
     <p><span>當對生物用火器進行攻擊時，可以花費一個英勇點來獲得攻擊優勢。</span></p>
     <h6 id='繳械射擊-disarming-shot'><strong><span>繳械射擊 Disarming Shot</span></strong></h6>
@@ -179,7 +179,7 @@
             </tr>
             <tr>
               <td><span>喇叭槍</span></td>
-              <td><span>500</span></td>
+              <td><span>300</span></td>
               <td><span>2d8穿刺</span></td>
               <td><span>10磅</span></td>
               <td><span>15/60</span></td>
